@@ -1,5 +1,6 @@
 3.3
   - Unix: automatially path.expand() to normalize e.g. homedir
+  - Unix: skip unicode path test on systems without UTF-8 locale.
 
 3.2
   - Windows: only use CREATE_BREAKAWAY_FROM_JOB if the process has the permission to
